examples/test/testpolicy11120.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy11120
  namespace: namespace22
spec:
  podSelector:
    matchLabels:
      key31: value13
      key7: value29
      key18: value2
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key0: value47
      podSelector:
        matchLabels:
          key26: value7
          key40: value30
          key12: value2
